Modified for octopress supports 1. fixed: author not support only one name as String. 2. fixed: some small bugs for running. 3. fixed: advanced Author index page.

--- a/_includes/post/author.html
+++ b/_includes/post/author.html
@@ -5,7 +5,4 @@
 {% else %}
   {% assign author = site.author %}
 {% endif %}
-<strong>Posted by: </strong> 
-{% if author %}
-	{{ author | author_links }}
-{% endif %}
+{% if author %}<span class="byline author vcard">Posted by <span class="fn">{{ author | author_links}}</span></span>{% endif %}
